# Titan-cnc

./: .gitignore  README.md  gradlew
.github/workflows/: Build.yml  Unpacktoroot.yml  release.yml  unpack-zip.yml
Root/: TitanCNC_Preview.html  index.html
Root/TitanCNC/: LICENSE  settings.gradle.kts
Root/TitanCNC/app/src/main/cpp/: native-lib.cpp
Root/TitanCNC/app/src/main/java/com/titancnc/: MainActivity.kt
Root/TitanCNC/app/src/main/java/com/titancnc/service/: GCodeSender.kt
Root/TitanCNC/app/src/main/res/values/: strings.xml
TitanCNC/: README.md  gradle.properties
TitanCNC/.github/workflows/: release.yml
TitanCNC/app/: build.gradle.kts  proguard-rules.pro
TitanCNC/app/src/main/cpp/: CMakeLists.txt
TitanCNC/app/src/main/java/com/titancnc/utils/: ChiploadCalculator.kt
TitanCNC/app/src/main/res/values/: themes.xml
TitanCNC/app/src/main/res/xml/: data_extraction_rules.xml  usb_device_filter.xml
TitanCNC/gradle/: libs.versions.toml
app/: build.gradle.kts
app/src/main/java/com/titancnc/data/model/: Tool.kt
app/src/main/java/com/titancnc/service/: ConnectionManager.kt
app/src/main/java/com/titancnc/ui/screens/: DashboardScreen.kt
app/src/main/res/values/: colors.xml
app/src/main/res/xml/: backup_rules.xml
extracted/: GITHUB_SETUP.md  QUICK_START.md
extracted/TitanCNC/: build.gradle.kts
extracted/TitanCNC/app/src/main/: AndroidManifest.xml
extracted/TitanCNC/app/src/main/java/com/titancnc/: TitanCNCApplication.kt
extracted/TitanCNC/app/src/main/res/xml/: file_paths.xml
github/workflows/: build.yml..
(+15 files in other folders)
